netlify no permite subcarpetas

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🐱 Prueba Técnica Felina - Iyata SAS</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
@@ -114,6 +114,6 @@
     </div>
 
       <!-- Por buenas practicas dejo el script al final para que no relentize la carga de la pagina. -->      
-     <script src="/js/script.js"></script>
+     <script src="script.js"></script>
 </body>
 </html>
